--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -231,7 +231,7 @@
 <p>一： Service,Endpoints与Pod的关系</p>
 </blockquote>
 
-<p><img src="./content/post/proxy.jpg" alt="q1" /></p>
+<p><img src="images/proxy.jpg" alt="q1" /></p>
     </section>
 
 
